<resources>
    <string name="Cancel">Cancel</string>
    <string name="Dinar">Дин.</string>
    <string name="Login">Login</string>
    <string name="Malaysian_Ringgit">MYR</string>
    <string name="NO_Account_Error">Sorry!No Account Found</string>
    <string name="NO_Details_Error">Sorry!No Personal Note Found</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Riyal">﷼</string>
    <string name="Rs">₹</string>
    <string name="Ruble">руб</string>
    <string name="Rupee">Rs.</string>
    <string name="Select_Acc_Category">Select An Account Category</string>
    <string name="ShareAppSubject">Subject: (isme sabse pahle regsitaraion se name pick karenge) Suggest you Personal Easy Accounting App for Andoroid Mobile</string>
    <string name="ShartAppHtml">Dear Friend,\n\nI would like to inform you that i am using very useful Simple Accounting app (Android).It works amazing and i am very much satisfied with this app. It helps me to manage all my accounting on finger tips.\n\nIts key features are:\n\nAccount Ledger, Overall Balance, Day wise Transaction Report, Day wise Cumulative Report, Last 12 Months Transaction Report with Pie and Bar Chart, Reminders (Appointment, Yearly and Monthly), Auto Backup with email facility. All reports can be exported to PDF and Excel file ( can share as well ), user manual and with many more features… .\n\nI would like to suggest you to please download or install this app from Google Play Store and use it.\nhttp://bit.ly/1LGUjOE</string>
    <string name="Username">Username</string>
    <string name="View_Details">View_Details</string>
    <string name="Yen">¥</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="ad_id_interstitial">ca-app-pub-6532370420034469/4225831236</string>
    <string name="ad_unit_id">ca-app-pub-6532370420034469/2749098037</string>
    <string name="add">Add</string>
    <string name="add_values">Add values to the chart</string>
    <string name="alert_delete_multiple_account">Are you really want to delete selected Accounts.</string>
    <string name="alert_delete_multiple_transaction">Are you really want to delete selected Transactions.</string>
    <string name="alert_title">alert_title</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="app_name">Simple Accounting</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup_import_fail">Error! BackUp not Imported.</string>
    <string name="backup_import_success">BackUp Imported Successfully.</string>
    <string name="backup_mail_body">Dear Simple Accounting User,\nPlease Find Your DataBase backup file as attachment.\n\nIf you like to import data backup file in App from email then first download it from there to your mobile and copy it into SDCard --&gt; SimpleAccounting folder.\n\nThen you will be able to import this file from Recovery/Import option in App.</string>
    <string name="backup_mail_subject">Simple Accounting BackUp File</string>
    <string name="backup_success">Backup Done Successfully.</string>
    <string name="both_exprort">Export to Report</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_AddReminder">Add Reminder</string>
    <string name="btn_Add_Credit">Add Credit</string>
    <string name="btn_Add_Debit">Add Debit</string>
    <string name="btn_Add_Details">ADD Details</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_ChangePass">Change Password</string>
    <string name="btn_Create_Account">Create Account</string>
    <string name="btn_Delete">Delete</string>
    <string name="btn_Edit">Edit</string>
    <string name="btn_Go">Go</string>
    <string name="btn_Ok">OK</string>
    <string name="btn_Save">Save</string>
    <string name="btn_Send">Send</string>
    <string name="btn_Settle_All">Settle All Accounts</string>
    <string name="btn_Share">Share</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_admin_screen">Options</string>
    <string name="btn_home_screen">Home</string>
    <string name="btn_map">View Chart</string>
    <string name="btn_open_camera">Open Camera</string>
    <string name="btn_open_gallery">Open Gallery</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cleanupMaxAgePrefDefValue">0</string>
    <string name="cleanupMaxNumberPrefDefValue">0</string>
    <string name="cleanupTotalSizePrefDefValue">0</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_settle_balance">Do you want to settle account with Balance. This will left single entry of total balance amount of this account.</string>
    <string name="confirm_settle_zero">Do you want to settel account. This will remove all transactions of this account.</string>
    <string name="default_web_client_id">849453436742-bv7c3a9aai22qjhimlusrg2sohlcmpq3.apps.googleusercontent.com</string>
    <string name="dollar">$</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="drawer_close">Navigation drawer Close</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drop_box">DropBox</string>
    <string name="dropbox">dropbox</string>
    <string name="err_settle_equal_amount">Your credit and debit balance are equal. You can not settle account with balance amount.</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Decline</string>
    <string name="hint_pass">Password</string>
    <string name="hint_user_name">User name</string>
    <string name="sAutomaticBackup">Automative Setting</string>
    <string name="sMaxTotalSizeOfFiles">Day after backup</string>
    <string name="sMaxTotalSizeOfFilesDlgMsg">Enter number of day for backup</string>
    <string name="selectdate">Select Date</string>
    <string name="spinner_title">Select an Account</string>
    <string name="title_activity_settle_account">Settle Account</string>
    <string name="txt_Autobackupgen">Auto Backup Generation Duration (In Days)</string>
    <string name="txt_ChooseCountry">Select Currency of Your Country</string>
    <string name="txt_ChooseCurrency">Choose Currency</string>
    <string name="txt_Chooselang">Choose Language</string>
    <string name="txt_Confirm_Password">Confirm Password</string>
    <string name="txt_Email">Email</string>
    <string name="txt_Mobile">Mobile No</string>
    <string name="txt_Name">Name</string>
    <string name="txt_Password">Password</string>
    <string name="txt_Remark">Remark</string>
    <string name="txt_ReminderBefore">Remind Before</string>
    <string name="txt_ReminderDes">Reminder Description</string>
    <string name="txt_ReminderOn">Remind On</string>
    <string name="txt_SelectPass">Choose Option</string>
    <string name="txt_Selectlang">Select Preferred Language</string>
    <string name="txt_TitlePass">Password Option</string>
    <string name="txt_Turnbackup">Select To Turn On DB Backup Automatically</string>
    <string name="txt_Username">Username(without any space)</string>
    <string name="txt_city">Country/City(Optional)</string>
    <string name="txt_code">PromoCode(Optional)</string>
    <string name="txt_footer">If you are a first-time user, you will be register first then You will provide your Username, password Via registration.</string>
    <string name="txt_forgot_pass">Forgot password</string>
    <string name="txt_register">Register</string>
    <string name="txt_remember_login_page">Remember me</string>
    <string name="txt_sign_in">Sign in</string>
</resources>