<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff34374a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/layout_footer_fp">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:orientation="vertical" android:background="@drawable/top_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="7.0dip">
                <com.adslinfotech.mobileaccounting.utils.RoundedImageView
                    android:layout_gravity="center" android:id="@id/img_profile" android:clickable="true" android:layout_width="110.0dip" android:layout_height="110.0dip" android:src="@drawable/add_profile_pic" android:layout_centerInParent="true" android:onClick="onClick" />
            </RelativeLayout>
            <EditText android:textStyle="bold" android:id="@id/efname" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:hint="@string/txt_Name" android:singleLine="true" android:inputType="textCapWords" style="@style/TextViewStyleHint" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/ename" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:hint="@string/txt_Username" android:singleLine="true" android:inputType="textNoSuggestions" style="@style/TextViewStyleHint" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/eemail" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:hint="@string/txt_Email" android:inputType="textEmailAddress" style="@style/TextViewStyleHint" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/rmono" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:hint="@string/txt_Mobile" android:digits="0123456789+" android:inputType="phone" style="@style/TextViewStyleHint" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/repass" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:hint="@string/txt_Password" android:inputType="textPassword" style="@style/TextViewStyleHint" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/conpass" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:hint="@string/txt_Confirm_Password" android:inputType="textPassword" style="@style/TextViewStyleHint" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/city" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:hint="@string/txt_city" android:inputType="textNoSuggestions" style="@style/TextViewStyleHint" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/code" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:hint="@string/txt_code" android:inputType="textNoSuggestions" style="@style/TextViewStyleHint" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/white" android:id="@id/currency" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:text="@string/txt_ChooseCurrency" />
            <Spinner android:textSize="11.0dip" android:textColor="@android:color/white" android:id="@id/currency_type" android:background="@drawable/image_shape" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:prompt="@string/txt_ChooseCurrency" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/white" android:id="@id/lang" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:text="@string/txt_Chooselang" />
            <Spinner android:textSize="11.0dip" android:textColor="@android:color/white" android:id="@id/language_type" android:background="@drawable/image_shape" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="7.0dip" android:prompt="@string/txt_Chooselang" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/layout_footer_fp" android:paddingTop="0.5dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_alignParentBottom="true">
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/submit" android:background="@drawable/login_button_selector" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_margin="3.0dip" android:layout_marginRight="1.0dip" android:text="@string/btn_Submit" android:layout_weight="1.0" />
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/cancel" android:background="@drawable/login_button_selector" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_margin="3.0dip" android:text="@string/Cancel" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>