<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:background="#ff34374a" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/adView">
        <RelativeLayout android:background="#ff34374a" android:focusable="false" android:scrollbars="vertical" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:isScrollContainer="true">
            <ImageView android:id="@id/img_logo_title_login" android:background="#ff236087" android:layout_width="fill_parent" android:layout_height="120.0dip" android:src="@drawable/login_icon" android:layout_centerHorizontal="true" />
            <RelativeLayout android:id="@id/relativelayout1" android:background="#ff3b4259" android:padding="8.0dip" android:focusable="false" android:scrollbars="vertical" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_below="@id/img_logo_title_login" android:isScrollContainer="true">
                <EditText android:textStyle="bold" android:gravity="center|left" android:id="@id/txt_password_login" android:background="@drawable/edittext_color" android:paddingLeft="14.0dip" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginTop="25.0dip" android:hint="@string/hint_pass" android:layout_below="@id/txt_user_name_login" android:layout_alignLeft="@id/txt_user_name_login" android:layout_alignRight="@id/txt_user_name_login" android:inputType="textPassword" style="@style/TextViewStyle16.5_username" />
                <EditText android:textStyle="bold" android:gravity="center|left" android:id="@id/txt_user_name_login" android:background="@drawable/edittext_color" android:paddingLeft="14.0dip" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="12.5dip" android:layout_marginTop="10.0dip" android:layout_marginRight="12.5dip" android:hint="@string/hint_user_name" android:ems="10" android:layout_alignParentLeft="true" android:inputType="textEmailAddress" style="@style/TextViewStyle16.5_username" />
                <CheckBox android:textColor="@android:color/white" android:id="@id/chk_remember" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:button="@drawable/checkbox_selector" android:text="@string/txt_remember_login_page" android:layout_below="@id/txt_password_login" android:layout_alignLeft="@id/txt_password_login" />
                <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_registration" android:background="@drawable/login_button_selector" android:layout_width="88.5dip" android:layout_height="34.5dip" android:layout_marginTop="10.0dip" android:text="@string/txt_register" android:layout_below="@id/btn_login" android:layout_alignLeft="@id/btn_login" android:onClick="onClick" style="@style/TextViewStyle16" />
                <Button android:textSize="14.5dip" android:textStyle="bold" android:textColor="@color/white" android:id="@id/txt_forgot_pass" android:background="@drawable/login_button_selector" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_margin="5.0dip" android:layout_marginRight="50.0dip" android:text="@string/txt_forgot_pass" android:layout_alignBottom="@id/btn_registration" android:layout_alignParentLeft="true" style="@style/TextViewStyle14" />
                <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_login" android:background="@drawable/login_button_selector" android:layout_width="88.5dip" android:layout_height="34.5dip" android:text="@string/txt_sign_in" android:layout_alignTop="@id/chk_remember" android:layout_alignRight="@id/txt_password_login" android:onClick="onClick" style="@style/TextViewStyle16" />
            </RelativeLayout>
            <View android:id="@id/line_separator" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" android:layout_below="@id/relativelayout1" />
            <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/txt_footer_login" android:background="#ff236087" android:paddingTop="20.0dip" android:paddingBottom="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/txt_footer" android:layout_below="@id/line_separator" style="@style/TextViewStyle14" />
        </RelativeLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:background="#ff34374a" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" app:adSize="SMART_BANNER" app:adUnitId="@string/ad_unit_id" />
</RelativeLayout>