<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff34374a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:background="#ff34374a" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" ads:adSize="SMART_BANNER" ads:adUnitId="@string/ad_unit_id" />
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bottom" android:layout_below="@id/adView">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Spinner android:textAppearance="?android:textAppearanceLarge" android:id="@id/sp_not_type" android:background="@drawable/image_shape" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_margin="7.0dip" android:prompt="@string/spinner_title" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/et_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:hint="@string/txt_ReminderDes" android:singleLine="true" android:inputType="textCapWords" style="@style/TextViewStyleHint" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:textColor="@color/white" android:id="@id/tvdate" android:background="#ff3b4259" android:padding="5.0dip" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/txt_ReminderOn" />
            <RelativeLayout android:id="@id/relativeLayout1" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="7.0dip">
                <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/et_date" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:ems="10" android:inputType="date" />
                <Spinner android:textAppearance="?android:textAppearanceLarge" android:id="@id/sp_days_month" android:background="@drawable/image_shape" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:prompt="@string/spinner_title" />
                <ImageButton android:id="@id/img_date" android:background="@drawable/ic_datepicker" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:cropToPadding="true" android:layout_toRightOf="@id/et_date" android:contentDescription="@string/selectdate" />
            </RelativeLayout>
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:textColor="@color/white" android:id="@id/tvdaybefore" android:background="#ff3b4259" android:padding="5.0dip" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/txt_ReminderBefore" />
            <Spinner android:textAppearance="?android:textAppearanceLarge" android:id="@id/sp_bfr_days" android:background="@drawable/image_shape" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_margin="7.0dip" android:prompt="@string/spinner_title" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/et_remark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="7.0dip" android:hint="@string/txt_Remark" android:inputType="textCapWords" style="@style/TextViewStyleHint" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/bottom" android:background="@color/theme_border" android:paddingTop="0.5dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_save" android:background="@drawable/login_button_selector" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_margin="2.0dip" android:text="@string/btn_Save" android:layout_weight="1.0" android:onClick="onClick" />
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_delete" android:background="@drawable/login_button_selector" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_margin="2.0dip" android:text="@string/btn_Delete" android:layout_weight="1.0" android:onClick="onClick" />
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_cancel" android:background="@drawable/login_button_selector" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_margin="2.0dip" android:text="@string/btn_Cancel" android:layout_weight="1.0" android:onClick="onClick" />
    </LinearLayout>
</RelativeLayout>