<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff34374a" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:background="#ff34374a" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" ads:adSize="SMART_BANNER" ads:adUnitId="@string/ad_unit_id" />
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/layout_footer_fp" android:layout_below="@id/adView">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:orientation="vertical" android:background="@drawable/top_bar" android:layout_width="fill_parent" android:layout_height="120.0dip" android:layout_margin="7.0dip">
                <com.adslinfotech.mobileaccounting.utils.RoundedImageView
                    android:layout_gravity="center" android:id="@id/img_profile" android:clickable="true" android:layout_width="100.0dip" android:layout_height="100.0dip" android:src="@drawable/add_profile_pic" android:layout_centerInParent="true" android:onClick="onClick" />
            </RelativeLayout>
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/et_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="7.0dip" android:hint="@string/txt_Name" android:singleLine="true" android:inputType="textNoSuggestions" style="@style/TextViewStyleHint">
                <requestFocus />
            </EditText>
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/et_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginTop="17.0dip" android:layout_marginRight="7.0dip" android:hint="@string/txt_Email" android:inputType="textEmailAddress" style="@style/TextViewStyleHint" />
            <EditText android:textStyle="bold" android:textColor="@color/white" android:id="@id/et_mobile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginTop="17.0dip" android:layout_marginRight="7.0dip" android:hint="@string/txt_Mobile" android:inputType="number" style="@style/TextViewStyleHint" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/layout_footer_fp" android:background="@color/theme_border" android:paddingTop="0.5dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_save" android:background="@drawable/login_button_selector" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_margin="3.0dip" android:text="@string/btn_Save" android:layout_weight="1.0" />
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_cancel" android:background="@drawable/login_button_selector" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_margin="3.0dip" android:text="@string/btn_Cancel" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>